# my-shortcuts

./: .releaserc  package-lock.json  package.json  postpublish.sh
.github/workflows/: semantic-release.yaml
src/: App.svelte  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.config.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/src/: lib.rs  main.rs
src/lib/: Greet.svelte
